--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@ body {
   background-color: #111111;
 }
 h1 {
+  font-family: 'Monaco';
+  font-size: 20px;
   text-align: center;
-  color:#dddddd;
+  color:rgba(221, 221, 221, 0.5);
 }
